--- a/PTPMQL/PROJECT/DemoMVC/Views/Home/Index.cshtml
+++ b/PTPMQL/PROJECT/DemoMVC/Views/Home/Index.cshtml
@@ -3,6 +3,5 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <p>Bài<a href="http://localhost:5069/Student">Student</a>.</p>
 </div>
