--- a/PTPMQL/PROJECT/DemoMVC/Views/Student/Index.cshtml
+++ b/PTPMQL/PROJECT/DemoMVC/Views/Student/Index.cshtml
@@ -13,6 +13,9 @@
     <thead>
         <tr>
             <th>
+                @Html.DisplayNameFor(model => model.PersonID)
+            </th>
+                <th>
                 @Html.DisplayNameFor(model => model.FullName)
             </th>
             <th>
@@ -23,7 +26,9 @@
     </thead>
     <tbody>
 @foreach (var item in Model) {
-        <tr>
+        <tr> <td>
+                @Html.DisplayFor(modelItem => item.PersonID)
+            </td>
             <td>
                 @Html.DisplayFor(modelItem => item.FullName)
             </td>
