--- a/PTPMQL/PROJECT/DemoMVC/Views/Student/Index.cshtml
+++ b/PTPMQL/PROJECT/DemoMVC/Views/Student/Index.cshtml
@@ -8,6 +8,7 @@
 
 <p>
     <a asp-action="Create">Create New</a>
+     <a class="btn btn-success" asp-action="Download">Xuất Excel</a>
 </p>
 <table class="table">
     <thead>
