--- a/PTPMQL/PROJECT/DemoMVC/Views/Home/Index.cshtml
+++ b/PTPMQL/PROJECT/DemoMVC/Views/Home/Index.cshtml
@@ -3,5 +3,8 @@
 }
 
 <div class="text-center">
+    <h1>Phan Duc Luong</h1>
     <p>Bài<a href="http://localhost:5069/Student">Student</a>.</p>
+     <p>Bài<a href="http://localhost:5069/HeThongPhanPhoi">Hệ thống phân phối</a>.</p>
+      <p>Bài<a href="http://localhost:5069/DaiLy">Đại lý</a>.</p>     
 </div>
