--- a/PTPMQL/PROJECT/DemoMVC/Views/DaiLy/Details.cshtml
+++ b/PTPMQL/PROJECT/DemoMVC/Views/DaiLy/Details.cshtml
@@ -35,10 +35,10 @@
             @Html.DisplayFor(model => model.DienThoai)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.HeThongPhanPhoi)
+            @Html.DisplayNameFor(model => model.HTPP)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.HeThongPhanPhoi.MaHTPP)
+            @Html.DisplayFor(model => model.HTPP.MaHTPP)
         </dd>
     </dl>
 </div>
