--- a/PTPMQL/PROJECT/DemoMVC/Views/DaiLy/Index.cshtml
+++ b/PTPMQL/PROJECT/DemoMVC/Views/DaiLy/Index.cshtml
@@ -25,35 +25,36 @@
                 @Html.DisplayNameFor(model => model.DienThoai)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.HeThongPhanPhoi)
+                @Html.DisplayNameFor(model => model.HTPP)
             </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.TenDaiLy)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DiaChi)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.NguoiDaiDien)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DienThoai)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.HeThongPhanPhoi.MaHTPP)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.MaDaiLy">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.MaDaiLy">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.MaDaiLy">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.TenDaiLy)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.DiaChi)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.NguoiDaiDien)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.DienThoai)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.HTPP.MaHTPP)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.MaDaiLy">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.MaDaiLy">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.MaDaiLy">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
