--- a/PTPMQL/PROJECT/DemoMVC/Views/DaiLy/Index2.cshtml
+++ b/PTPMQL/PROJECT/DemoMVC/Views/DaiLy/Index2.cshtml
@@ -1,4 +1,4 @@
-@model IEnumerable<DemoMVC.Models.HeThongPhanPhoi>
+@model IEnumerable<DemoMVC.Models.ViewModels.DaiLyVM>
 
 @{
     ViewData["Title"] = "Index";
@@ -13,12 +13,14 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.MaHTPP)
+                @Html.DisplayNameFor(model => model.MaDaiLy)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.TenDaiLy)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.TenHTPP)
             </th>
-            <th></th>
         </tr>
     </thead>
     <tbody>
@@ -26,15 +28,13 @@
         {
             <tr>
                 <td>
-                    @Html.DisplayFor(modelItem => item.MaHTPP)
+                    @Html.DisplayFor(modelItem => item.MaDaiLy)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.TenDaiLy)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.TenHTPP)
-                </td>
-                <td>
-                    <a asp-action="Edit" asp-route-id="@item.MaHTPP">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.MaHTPP">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.MaHTPP">Delete</a>
                 </td>
             </tr>
         }
